--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 	<p class="para2">The fonts look great, don't they??</p>
 	<br>
 	<br>
-	<img src="images/Optimized-stormtrooper_in_desert.jpg" alt="storm trooper">
+	<img src="images/Optimized-stormtrooper_in_desert.jpg" width="800px" height="800px" alt="storm trooper">
 	<br />	
 	<br />
-	<img src="images/optimized-simpsons.jpg" alt="simpsons sofa">
+	<img src="images/optimized-simpsons.jpg" width="600px" height="600px" alt="simpsons sofa">
 	<br />
-	<img src="images/optimized-red_code.jpg" width="800px" alt="red code">
+	<img src="images/optimized-red_code.jpg" width="800px" height="800px" alt="red code">
 	<br />
-	<img src="images/optimized-sample-jpg-file-for-testing2.jpg" alt="another image of dull landscape">
+	<img src="images/optimized-sample-jpg-file-for-testing2.jpg" width="600px" height="600px" alt="another image of dull landscape">
 	<br />	
 	<br />
-	<img src="images/optimized-view_of_city_lge_file.jpg" alt="ariel view of city">
+	<img src="images/optimized-view_of_city_lge_file.jpg" width="800px" height="800px" alt="ariel view of city">
 	<br />	
 	<br />
 	
